perm gen for datomic