@@ -10,4 +10,5 @@
 			'[clojure.tools.namespace.repl])]
   :profiles {:database {:dependencies [[com.datomic/datomic-free "0.8.3731"]]}
              :cljs {:dependencies [[org.clojure/google-closure-library "0.0-2029"]
-                                   [org.clojure/google-closure-library-third-party "0.0-2029"]]}})
+                                   [org.clojure/google-closure-library-third-party "0.0-2029"]]}}
+  :jvm-opts ["-XX:MaxPermSize=256M"])
